oc/allow-traffic-airbyte.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-airbyte
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: airbyte
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-airbyte-jobs
spec:
  podSelector:
    matchLabels:
      airbyte: job-pod
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
